analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/anonympuseObjectInInvalidPosition.kt
private val _commonSettingsLazy: A = null = <expr>object : A<Int> {
    override fun x() {}
}</expr>

interface A<T> {
    fun x()
}
